--- a/css/main.css
+++ b/css/main.css
@@ -439,7 +439,6 @@ div code {
   color: white;
   background: transparent;
   border: 2px solid white;
-  float:right;
 
   font-weight: bold;
   font-size: 1rem; 
@@ -693,7 +692,7 @@ a:active, a:hover {
 h1 {
 font-family: 'Bree Serif', serif;
 font-weight: 100;
-  font-size: 2rem; 
+  font-size: 2.25rem; 
   margin-bottom: 0;
   color:black;
 }
@@ -704,7 +703,7 @@ font-family: 'Bree Serif', serif;
 font-weight: 100;
   letter-spacing: 2px;
   margin-top: 0;
-  font-size: 1.75rem; 
+  font-size: 2rem; 
   
 }
 
@@ -744,11 +743,16 @@ strong a:visited{
 
 
 h3 {
-  font-family: Lato, sans-serif;
-  font-weight: lighter;
-  font-style: italic;
+  margin: 0;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
+  padding-bottom: 0.3em;
+  padding-top: 0;
+  font-size: 0.85rem;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: white;
   padding-bottom: 0.5em;
-  font-size: 1.5rem; 
 
 }
 
